<resources>
    <string name="app_name">LaporKuy!</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="dummy_activity_detail_title">Pencurian</string>
    <string name="dummy_activity_detail_name">Joko Nuryasin</string>
    <string name="dummy_activity_detail_date">2017-10-24 23:05:11</string>
    <string name="dummy_activity_detail_address">3700 Willison Street Minneapolis Minnesota 55401</string>
    <string name="dummy_activity_detail_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="dummy_activity_detail_process">Proses : Sudah diproses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
