<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/activity_detail_button_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/baseline_keyboard_backspace_white_24" />

        <TextView
            android:id="@+id/activity_detail_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_activity_detail_title"
            android:textColor="@color/whiteStuff"
            android:textSize="25sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin_double"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_end"
            />

        <TextView
            android:id="@+id/activity_detail_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_activity_detail_name"
            android:textColor="@color/whiteStuff"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_double"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_end"
            />

        <TextView
            android:id="@+id/activity_detail_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_activity_detail_date"
            android:textColor="@color/whiteStuff"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_double"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_end"
            />

        <TextView
            android:id="@+id/activity_detail_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_activity_detail_address"
            android:textColor="@color/whiteStuff"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin_double"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_end"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin_double"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_end"
            />

        <TextView
            android:id="@+id/activity_detail_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_activity_detail_description"
            android:textColor="@color/whiteStuff"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin_double"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_end"
            />

        <TextView
            android:id="@+id/activity_detail_proses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dummy_activity_detail_process"
            android:textColor="@color/whiteStuff"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_double"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_end"
            />

        <Button
            android:id="@+id/activity_detail_button_kontribusi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="kontribusi"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin_double"
            android:layout_marginEnd="@dimen/activity_horizontal_margin_end"
            android:visibility="visible"
            android:background="@color/colorPrimaryDark"
            />

    </LinearLayout>

</ScrollView>